--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
     "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.20.0",
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
     "history": "^4.9.0",
@@ -40,6 +41,7 @@
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-material-ui-form-validator": "^2.1.1",
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.1",
