--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.20.0",
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
+    "file-saver": "^2.0.5",
     "history": "^4.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -54,7 +55,8 @@
     "sweetalert2-react": "^0.8.3",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.0.1",
